--- a/app/views/article_comments/_comment.html.erb
+++ b/app/views/article_comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row comment">
   <div class="span3">
     <%= gravatar_image_tag( User.find(comment.user_id).email ) %>
   </div>
