--- a/app/views/dispensary_comments/_comment.html.erb
+++ b/app/views/dispensary_comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row comment">
   <div class="span7">
 		<div class="gravitar span2"><%= gravatar_image_tag(comment.user.email) %></div>
 		<h3><%= comment.user.user_name %></h3>
